# test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  code_style.md  dfpostcore_export.h  dfpoststring.cpp  dfpoststring.h  first.cbp  tst_first.cpp
.cmake/api/v1/reply/: cache-v2-8d55502224990fb05227.json  cmakeFiles-v1-db71311d5b1d3872ec9b.json  codemodel-v2-821c697f3f8be9164d51.json  index-2022-06-30T17-15-41-0939.json  target-first-Debug-5f689dbff3d61319df33.json  target-first_autogen-Debug-f94bfdd7642c847232f3.json
build-string_test-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  first.cbp
build-string_test-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-0f05be4f485c8a1903a1.json  cmakeFiles-v1-9f2c3dc2a6680720cca2.json  codemodel-v2-56c948fb8704dea84851.json  index-2022-06-29T13-12-16-0570.json  target-first-Debug-5ec87d4359f1ed5deec3.json  target-first_autogen-Debug-7b0786bef78f56d5868c.json
build-string_test-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/first_autogen/: moc_predefs.h
build-string_test-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/first_autogen/include/: tst_first.moc
first_autogen/: moc_predefs.h
first_autogen/include/: tst_first.moc
test/: dfpoststring.h
